# messenger

./: .gitignore  CMakeLists.txt  ChatMessage.h  README.md
client/: client.cpp  client_hdr.h  main.cpp  not_main.cpp  socket.cpp  socket.h
server/: Connection.cpp  Connection.h  Server.cpp  Server.h  main.cpp
